--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 		<div class="col-md-8">
 			<div class="thumnail">
 			
-				<h1><%= current_user.first_name %> <%= current_user.last_name %></h1>
+				<h1 class="showpage-name"><%= current_user.first_name %> <%= current_user.last_name %></h1>
 				<h4><%= current_user.email %></h4>
 				<h4><%= current_user.address %>, <%= current_user.postcode %>, <%= current_user.city %>, <%= current_user.state %>.</h4>
 				<h2>About Me!</h2>
@@ -18,13 +18,9 @@
 		</div>
 	</div>
 	<div>
-		<h3>Requested Job</h3>
-
-	</div>
-	<div>
-		<h3>Completed Job</h3>
-
-		<% @job.each do |t| %>
+		<h3 class="showpage-title">Requested Job</h3>
+		<% @requested = @job.where(status: "0") && @job.where(status: "1") %>
+		<% @requested.each do |t| %>
 		  <%= link_to job_path(t.id) do %>
 		  <div class="thumbnail jobstyle">
 		    <%= image_tag("cooking.jpg", class:"thumnail-image")%>
@@ -32,9 +28,36 @@
 		      <h3><%= t.name %></h3>
 		      <h5><%= t.category %></h5>
 		      <h5>RM <%= t.price %></h5>
+		      <h5><%= t.start_date.strftime("%d %b %Y") %>, <%= t.start_time.strftime("%l.%M %P") %></h5>
+		      <% if t.status == 0 %>
+		      	<h5><%= t.status %></h5>
+		      	<%= button_to "Edit", "#" %>
+		      <% else t.status == 1 %>
+		      	<h5><%= t.status %> by NAME</h5>
+		      <% end %>		
 		    </div>
 		  </div>
 		  <% end %>
+		<% end %>
+	</div>
+	<div>
+		<h3 class="showpage-title">Completed Job</h3>
+		<% @requested = @job.where(status: "2")  %>
+		<% @requested.each do |t| %>
+		  
+		  <div class="thumbnail jobstyle">
+		    <%= image_tag("cooking.jpg", class:"thumnail-image")%>
+		    <div class="caption">
+		      <h3><%= t.name %></h3>
+		      <h5><%= t.category %></h5>
+		      <h5><%= t.start_date.strftime("%d %b %Y") %>, <%= t.start_time.strftime("%l.%M %P") %></h5>
+
+		      <h5>RM <%= t.price %></h5>
+		      <%= button_to "Review", "#" %>
+		      <h5><a href="#">Click here for receipt</a></h5>
+		    </div>
+		  </div>
+		
 		<% end %>
 	</div>
 </div>
