homepage jobs css

--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -1,3 +1,21 @@
+.jobShowTopSection{
+	background-color: #484848;
+	color: #FFFFFF;
+	text-align: center;
+	height: 100px;
+	margin-bottom: 10px;
+}
+
+.jobShowTopSection h1{
+	font-weight: 900;
+	font-size: 5em;
+	padding-top: 11px;
+}
+
+.jobShowTopSectionChild{
+	line-height: 100px;
+}
+
 .sectionstyle{
 	text-align: center;
 	background-color: #FFFFFF;
