--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,5 +1,11 @@
 <%= render partial: "/layouts/navbar" %>
 
+<div class="row">
+	<div class="jobShowTopSection">
+		<h1>Job</h1>
+	</div>	
+</div>
+
 <div class="container">
 	<div class="col-md-8 sectionstyle leftsectionstyle leftsection">
 		<h1 id="jobName"><%= @job.name %></h1>
