homepage_different_view

--- a/app/views/jobs/show_all_job.html.erb
+++ b/app/views/jobs/show_all_job.html.erb
@@ -4,17 +4,21 @@
   <h1 id="latestjobheader">AVAILABLE JOB</h1>
   <br>
   <% @job.each do |t| %>
-    <%= link_to job_path(t.id) do %>
-    <div class="thumbnail jobstyle">
-      <%= image_tag("cooking.jpg", class:"thumnail-image")%>
-      <div class="caption">
-        <h3><%= t.name %></h3>
-        <h5><%= t.category %></h5>
-        <h5>RM <%= t.price %></h5>
+      <%= link_to job_path(t.id) do %>
+      <div class="thumbnail jobstyle">
+        <%= image_tag("cooking.jpg", class:"thumnail-image")%>
+        <h3 id="jobthumbnailName"><%= t.name %></h3>
+        <div class="caption">
+          <div class="captionPriceCategory">
+            <h5 id="jobthumbnailPrice">RM <%= t.price %></h5>
+          </div>
+          <div class="captionPriceCategory">
+            <h5 id="jobthumbnailCategory"><%= t.category %></h5>
+          </div>
+        </div>
       </div>
-    </div>
+      <% end %>
     <% end %>
-  <% end %>
   <div id='paginate'>
     <div class='container'><%= paginate @job ,outer_window: 3%></div>
   </div>
