--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -107,7 +107,7 @@
     <% end %>  
   <% end %>  
   <div id='paginate'>
-    <div class='container'><%= paginate @job ,outer_window: 3%></div>
+    <div class='container paginatecontainer'><%= paginate @job ,outer_window: 3%></div>
   </div>
 </div>
 
