Fixed price bug

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
     
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :price, placeholder: "Price", class: "form-control", readonly: true %>
+        RM<%= form.text_field :price, placeholder: "Price", class: "form-control", readonly: true %>
     </div>
     
     <div class="text-field form-group col-md-6">
