user able to post job from all job page and delete 'post job' button for affiliate view

--- a/app/views/jobs/show_all_job.html.erb
+++ b/app/views/jobs/show_all_job.html.erb
@@ -26,10 +26,7 @@
 
 <div class="joinusbutton">
   <% if signed_in? %>
-    <%= button_to "POST A JOB", "/", class:"joinusbuttonstyle" %>
-  <% end %>
-  <% if affiliate_signed_in? %>
-    <%= button_to "ACCEPT A JOB", "/", class:"joinusbuttonstyle" %>
+    <%= button_to "POST A JOB", "/jobs/new",method: :get, class:"joinusbuttonstyle" %>
   <% end %>
 </div>
 
