modify affiliate show page

--- a/app/assets/stylesheets/affliates.scss
+++ b/app/assets/stylesheets/affliates.scss
@@ -45,3 +45,10 @@ h2.sub-title{
 .form-text {
 	font-family: 'Poppins', sans-serif;
 }
+
+
+.thumbnail-review{
+   border-radius: 50%;
+   width:100px;
+   height:100px;
+ }
