--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -159,8 +159,12 @@ a.login-text {
   }
 }
 
-h1.showpage-name, h3.showpage-title {
+h1.showpage-name, h3.showpage-title, h4.showpage-verify {
   color:#6F3A8F;
+}
+
+h1.showpage-name{
+  margin-top:10px;
 
 }
 
