change pin image size and google map size

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
 	<div class="col-md-7 sectionstyle leftsectionstyle leftsection">
 		<div id="boardheadersection">
-			<div><%= image_tag("boardpin.jpg",class:"boardpinstyle")%></div>
+			<div><%= image_tag("boardpin2.png",class:"boardpinstyle")%></div>
 			<div class="boardheader"><h1 id="boardheaderWord">Job Posting</h1></div>
 		</div>
 		<h1 id="jobName"><%= @job.name %></h1>
@@ -29,11 +29,11 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-4 sectionstyle rightsectionstyle">
 		<div class="mapheadersection">
-			<div><%= image_tag("boardpin.jpg",class:"mappinstyle")%></div>
+			<div><%= image_tag("boardpin2.png",class:"mappinstyle")%></div>
 			<div><h4 id="mapheaderWord"><%= image_tag("googlemap.png",class:"flaticonstyle")%> Location At</h4></div>
 		</div>
-		<div style='width: 356.667px;'>
-  			<div id="map" style='width: 356.667px; height: 400px;'>
+		<div style='width: 293.333px;'>
+  			<div id="map" style='width: 293.333px; height: 400px;'>
   			</div>
 		</div>
 		<h2><%= image_tag("001-restaurant.svg",class:"flaticonstyle")%></h2>
