--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300');
 @import url('https://fonts.googleapis.com/css?family=Poppins|Sintony');
 @import 'companies';
+
+.row{
+	margin:0;
+}
