--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -112,7 +112,9 @@
     <% end %>  
   <% end %>  
   <div id='paginate'>
-    <div class='container paginatecontainer'><%= paginate @job ,outer_window: 3%></div>
+    <div class='container paginatecontainer' id="homepagepaginatecontainer">
+      <%= paginate @job ,outer_window: 3%>
+    </div>
   </div>
 </div>
 
