--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -7,12 +7,12 @@
     <%= form.hidden_field :name, value: current_user.first_name%>
     
     <% category = ["Cleaning Service", "Catering Service", "Mobile and Laptop Repair", "Home Maintenance", "Movers", "Plumbing Service"] %>
-    <div class="serviceCoveredSection">
-      <div><%= image_tag("catering.jpg", class:"servicesimage")%><h4>Catering</h4></div>
-      <div><%= image_tag("cleaningservice.jpg", class:"servicesimage")%><h4>Cleaning</h4></div>
-      <div><%= image_tag("mover.jpg", class:"servicesimage")%><h4>Mover</h4></div>
-      <div><%= image_tag("plumbing.png", class:"servicesimage")%><h4>Plumbing</h4></div>
-      <div><%= image_tag("gadgetservice", class:"servicesimage")%><h4>Gadget Repair</h4></div>
+    <div class="serviceCoveredSection row">
+      <div><%= image_tag("catering.jpg", class:"servicesimage")%><h4 class="text-center">Catering</h4><h4 class="text-center">RM100 per service</h4></div>
+      <div><%= image_tag("cleaningservice.jpg", class:"servicesimage")%><h4 class="text-center">Cleaning</h4><h4 class="text-center">RM80 per service</h4></div>
+      <div><%= image_tag("mover.jpg", class:"servicesimage")%><h4 class="text-center">Mover</h4><h4 class="text-center">RM70 per service</h4></div>
+      <div><%= image_tag("plumbing.png", class:"servicesimage")%><h4 class="text-center">Plumbing</h4><h4 class="text-center">RM60 per service</h4></div>
+      <div><%= image_tag("gadgetservice", class:"servicesimage")%><h4 class="text-center">Gadget Repair</h4><h4 class="text-center">RM150 per service</h4></div>
     </div>
   
     <div class="text-field form-group">
