--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -2,9 +2,9 @@
 
 
 <div class="container">
-	<h2>Request Job HERE</h2>
+	<h2 class="title", style="padding-left: 35px;">Request Job HERE</h2>
 	<%= render 'form'%>
 
-<%= link_to 'Back', root_path%>
+
 </div>
 <%= render partial: "/layouts/footer" %>
