--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -22,23 +22,6 @@
 	font-size: 2.5em;
 }
 
-.button{
-	color: black;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.buttonstyle{
-	border-radius: 10px;
-	border: 0;
-	font-family: 'Poppins', sans-serif;
-	font-weight: 900;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
 .container{
 	padding-top: 30px;
 	padding-bottom: 30px;
@@ -129,27 +112,6 @@
 	padding-bottom: 0;
 }
 
-.joinusbuttonstyle{
-	border-radius: 10px;
-	border: 0;
-	font-family: 'Poppins', sans-serif;
-	font-weight: 900;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-	background-color: #484848;
-}
-
-.joinusbutton{
-	margin: 0 auto;
-	color: #FFFFFF;
-	width:300px;
-	padding-bottom: 40px;
-	display: flex;
-	justify-content: space-around;
-}
-
 .caption{
 	text-align: center;
 }
@@ -204,4 +166,114 @@
 	width: 150px;
 	height: 150px;
 	border-radius: 50%;
+}
+
+/*button hover effect in homepage*/
+
+.button{
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.buttonstyle{
+	position: relative;
+	color:#FFFFFF;
+	text-decoration: none;
+	border-radius: 10px;
+	border: 0;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 900;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: #484848;
+}
+
+.buttonstyle:hover{
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+.buttonstyle:before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #1D8BDD;
+	visibility: hidden;
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transition: all 0.3s ease-in-out 0s;
+	transition: all 0.3s ease-in-out 0s;
+}
+
+.buttonstyle:hover:before{
+	visibility: visible;
+	-webkit-transform: scaleX(1);
+	transform: scaleX(1);
+}
+
+.joinusbuttonstyle{
+	border-radius: 10px;
+	border: 0;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 900;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	background-color: #FFFFFF;
+}
+
+.joinusbutton{
+	margin: 0 auto;
+	color: #000000;
+	width:300px;
+	padding-bottom: 40px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.joinusbuttonstyle{
+	position: relative;
+	color:#000000;
+	text-decoration: none;
+	border-radius: 10px;
+	border: 0;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 900;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: #FFFFFF;
+}
+
+.joinusbuttonstyle:hover{
+	color: #000000;
+	text-decoration: none;
+}
+
+.joinusbuttonstyle:before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #1D8BDD;
+	visibility: hidden;
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transition: all 0.3s ease-in-out 0s;
+	transition: all 0.3s ease-in-out 0s;
+}
+
+.joinusbuttonstyle:hover:before{
+	visibility: visible;
+	-webkit-transform: scaleX(1);
+	transform: scaleX(1);
 }
