--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -81,17 +81,43 @@
 	height: 41px;
 }
 
+.reservebuttonsection{
+	margin:0 auto;
+}
+
 .reservebutton{
-	background-color: red;
-	color: #FFFFFF;
-	border: 1px solid red;
+	position: relative;
+	background-color: none;
+	color: red;
 	padding: 10px;
 	border-radius: 25px; 
 	font-weight: 900;
-	font-size: 1.5em;
-	opacity: 0.6;
+	font-size: 1.3em;
+	margin-bottom: 10px;
 }
 
 .reservebutton:hover{
-	opacity: 1;
+	color: red;
+	text-decoration: none;
+}
+
+.reservebutton:before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #1D8BDD;
+	visibility: hidden;
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transition: all 0.3s ease-in-out 0s;
+	transition: all 0.3s ease-in-out 0s;
+}
+
+.reservebutton:hover:before{
+	visibility: visible;
+	-webkit-transform: scaleX(1);
+	transform: scaleX(1);
 }
