modified affiliate profile page

--- a/app/assets/stylesheets/affliates.scss
+++ b/app/assets/stylesheets/affliates.scss
@@ -46,6 +46,11 @@ h2.sub-title{
 	font-family: 'Poppins', sans-serif;
 }
 
+.portfolio {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
 
 .thumbnail-review{
    border-radius: 50%;
