edited affiliate signup page and company showpage background image

--- a/app/views/affiliates/sign_up.html.erb
+++ b/app/views/affiliates/sign_up.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "/layouts/navbar" %>
 
-<div class="background">
+<div class="background row">
     
     <h1 class="text text-right">You are the ONE</h1>
     <h1 class="text-right">are the ONE</h1>
