--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "/layouts/navbar" %>
 
-<div id="partnership" class="partnership-photo">
+<div id="partnership" class="partnership-photo row">
 	<h3 class="text-center partnership-text">Partner with us</h3>
 	<div class="apply-button">
 		<%= button_to "Apply", "/", class: "partnership-button text-center" %>
