--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -12,11 +12,25 @@
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
   </ol>
  
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
+      <%= image_tag ("picture5.jpg") %>
+      <div class="carousel-caption">
+        <h1 class="sectionword">A · PRIVATE · SCHEME · COMPANY</h1>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag ("picture6.jpg") %>
+      <div class="carousel-caption">
+        <h1 class="sectionword" id="informalsectorword">EXCLUSIVELY · FOR · INFORMAL · SECTOR </h1>
+      </div>
+    </div>
+    <div class="item">
       <%= image_tag ("picture1.jpg") %>
       <div class="carousel-caption">
       	<h1 class="sectionword">PARTNERSHIP · SECURITY </h1>
