--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -82,7 +82,7 @@
     <div><%= image_tag("gadgetservice", class:"servicesimage")%><h4>Gadget Repair</h4></div>
   </div>
   <div>
-    <h4>and more...</h4>
+    <h4>something new is coming ...</h4>
   </div>  
 </div>
 
