--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -57,6 +57,7 @@
 		<% if signed_in? %>
 			<% if (@job.user.id == current_user.id) && @job.status == "Accepted" %>
 				<div class="reservebuttonsection">
+					<%= link_to "Make Payment", "/jobs/#{@job.id}/payment" %>
 					<%= link_to "Acknowledge Job Completion", job_path, method: :patch, class: "reservebutton" %>
 				</div>
 			<% elsif (@job.user.id == current_user.id) && @job.status == "Pending" %>
@@ -75,7 +76,7 @@
 </div>
 </div>
 
-</br>
+
 
 <%= render partial: "/layouts/footer" %>
 
